--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,10 +10,11 @@ spring:
     virtual:
       enabled: true # 가상 스레드를 활성화합니다.
   datasource: # 데이터 소스 설정 부분입니다.
-    url: jdbc:h2:./medium_dev;MODE=MYSQL # 데이터베이스 연결 URL입니다. H2 데이터베이스를 사용하며, 파일 이름은 'medium_dev', MySQL 모드를 사용합니다.
-    username: sa # 데이터베이스 접속 계정 이름입니다.
-    password: # 데이터베이스 접속 비밀번호입니다. 비어있는 상태입니다.
-    driver-class-name: org.h2.Driver # 데이터베이스 드라이버 클래스 이름입니다. H2 데이터베이스 드라이버를 사용합니다.
+    driver-class-name: com.mysql.cj.jdbc.Driver # 데이터베이스 드라이버 클래스 이름입니다. H2 데이터베이스 드라이버를 사용합니다.
+    url: jdbc:mysql://localhost:3306/medium
+    username: root
+    password: lldj123414
+
   jpa:
     hibernate:
       ddl-auto: update # hibernate 설정 부분입니다. 스키마 변경을 자동으로 반영하도록 설정합니다.
