--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,10 +1,12 @@
+server:
+  port: 8090
 spring:
   output:
     ansi:
       enabled: always
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:medium_test;MODE=MYSQL
+    url: jdbc:h2:mem:medium_dev;MODE=MYSQL
     username: sa
     password:
   jpa:
