--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ out/
 
 ### custom ###
 application-secret.yml
-medium_dev.mv.db
-medium_dev.trace.db
+db_dev.mv.db
+db_dev.trace.db
 
 /src/main/generated/
