--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3', 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 
+    // 티카
+    implementation 'org.apache.tika:tika-core:2.9.1'
+
     // TEST
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -66,6 +69,8 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+
 
 }
 
