--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,10 +10,10 @@ spring:
     virtual:
       enabled: true # 가상 스레드를 활성화합니다.
   datasource: # 데이터 소스 설정 부분입니다.
-    driver-class-name: com.mysql.cj.jdbc.Driver # 데이터베이스 드라이버 클래스 이름입니다. H2 데이터베이스 드라이버를 사용합니다.
-    url: jdbc:mysql://localhost:3306/medium
-    username: root
-    password: lldj123414
+    driver-class-name: org.h2.Driver # 데이터베이스 드라이버 클래스 이름입니다. H2 데이터베이스 드라이버를 사용합니다.
+    url: jdbc:h2:./db_dev;MODE=MYSQL
+    username: sa
+    password:
 
   jpa:
     hibernate:
@@ -24,6 +24,22 @@ spring:
         format_sql: true # SQL을 포맷팅하여 출력하도록 설정합니다.
         highlight_sql: true # SQL을 하이라이트하여 출력하도록 설정합니다.
         use_sql_comments: true # SQL 주석을 사용하도록 설정합니다.
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            clientId: ${security.oauth2.client.registration.kakao.clientId}
+            scope: profile_nickname, profile_image
+            client-name: Kakao
+            authorization-grant-type: authorization_code
+            redirect-uri: '${custom.site.baseUrl}/{action}/oauth2/code/{registrationId}'
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
 logging: # 로깅 설정 부분입니다.
   level:
     com.ll.medium: DEBUG # 'com.ll.medium' 패키지의 로그 레벨을 'DEBUG'로 설정합니다.
@@ -35,6 +51,6 @@ custom: # 사용자 정의 설정 부분입니다.
   site:
     name: medium # 사이트 이름을 'medium'으로 설정합니다.
     baseUrl: "http://localhost:${server.port}" # 기본 URL을 'http://localhost:${server.port}'로 설정합니다.
-  tempDirPath: c:/Temp/medium_dev/temp # 임시 디렉토리 경로를 'c:/temp/medium_dev/temp'로 설정합니다.
+  tempDirPath: c:/Temp/last_dev/temp # 임시 디렉토리 경로를 'c:/temp/medium_dev/temp'로 설정합니다.
   genFile:
-    dirPath: c:/Temp/medium_dev # 파일 생성 디렉토리 경로를 'c:/temp/medium_dev'로 설정합니다.
+    dirPath: c:/Temp/last_dev # 파일 생성 디렉토리 경로를 'c:/temp/medium_dev'로 설정합니다.
