--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,19 +1,12 @@
-server:
-  port: 8090
 spring:
-  output:
-    ansi:
-      enabled: always
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:medium_dev;MODE=MYSQL
-    username: sa
-    password:
+    url: jdbc:h2:mem:db_test;MODE=MYSQL
   jpa:
     hibernate:
       ddl-auto: create
-    show-sql: false
 custom:
+  site:
+    baseUrl: "http://localhost:8080"
   tempDirPath: c:/temp/medium_test/temp
   genFile:
     dirPath: c:/temp/medium_test
